[tool.poetry]
name = "imlightgbm"
version = "0.1.0"
description = "LightGBM for label-imbalanced data with focal and weighted loss function"
authors = ["RektPunk <rektpunk@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/RektPunk/Imbalance-LightGBM"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.10"
lightgbm = "^4.5.0"
scikit-learn = "^1.5.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
